--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,17 @@
 .header {
-    display: flex;
-    justify-content: flex-start;
+    display: grid;
+    grid-area: h;
+    grid-template-columns: repeat(4, auto);
     align-items: center;
+    justify-content: start;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 44px;
     padding: 0 24px;
     background-color: #27272A;
+    border-bottom: 1px solid #414144;
 }
 
 .icon {
