--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -1,3 +1,20 @@
 .main {
     display: flex;
 }
+
+.mainTop {
+    display: flex;
+    width: 100%;
+    height: 45px;
+    background-color: #27272A;
+    border-bottom: 1px solid #414144;
+}
+
+.mainName {
+    display: flex;
+    align-items: center;
+    width: auto;
+    padding: 0 20px;
+    font-size: 18px;
+    border-right: 1px solid #414144;
+}
