--- a/src/components/EditDocument/EditDocument.module.scss
+++ b/src/components/EditDocument/EditDocument.module.scss
@@ -4,6 +4,8 @@
     height: 100%;
 
     span {
+        display: flex;
+        align-items: center;
         width: 100%;
         height: 100%;
     }
