--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -22,6 +22,10 @@
     font-size: 14px;
     color: #ffffff;
 
+    &:first-child {
+        width: 113px;
+    }
+
     &:nth-child(2) {
         width: 45%;
     }
@@ -30,7 +34,7 @@
 .levelIcons {
     display: flex;
     align-items: center;
-    width: 107px;
+    justify-content: flex-start;
     height: 28px;
     padding: 3px;
     border-radius: 6px;
@@ -56,4 +60,32 @@
 
 .hideIcon {
     display: none;
+}
+
+.secondLevel {
+    display: flex;
+    align-items: center;
+    width: 80px;
+    height: 28px;
+    margin-left: auto;
+    padding: 3px;
+    border-radius: 6px;
+    background-color: transparent;
+
+    &:hover {
+        background-color: #414144;
+
+        .hideIcon {
+            display: block;
+        }
+    }
+
+    img {
+        cursor: pointer;
+        margin-right: 3px;
+
+        &:last-child {
+            margin-left: 7px;
+        }
+    }
 }
